fixed contact info alignment

--- a/css/about.css
+++ b/css/about.css
@@ -60,7 +60,7 @@ a:visited {
 }
 
 .contactLink {
-  padding: 5% 5% 0;
+  padding: 5% 5px 0;
 }
 
 .bannerquote {
